--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@ethersproject/abstract-signer": "^5.1.0",
     "@ethersproject/bignumber": "^5.1.1",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.8.2",
     "@typechain/ethers-v5": "^5.0.0",
     "@typechain/hardhat": "^1.0.1",
     "@types/chai": "^4.2.13",
@@ -58,7 +60,7 @@
     "smart-contracts",
     "solidity"
   ],
-  "license": "WTFPL",
+  "license": "",
   "publishConfig": {
     "access": "public"
   },
